gloo/virtual-service.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-test
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-petstore-8080
            namespace: gloo-test
      options:
        headerManipulation:
          responseHeadersToAdd:
            - header:
                key: X-test
                value: hello
        ratelimit:
          rateLimits:
            - actions:
              - genericKey:
                  descriptorValue: slowpath
            - actions:
              - requestHeaders:
                  descriptorKey: plan
                  headerName: x-plan
              - requestHeaders:
                  descriptorKey: account
                  headerName: x-account
